force-app/main/default/objects/Label_Role__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <referenceTo>Labels__c</referenceTo>
    <relationshipLabel>Label Roles</relationshipLabel>
    <relationshipName>Label_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>